; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_params.c_param_get_string.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_params.c_param_get_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kernel_param = type { %struct.kparam_string* }
%struct.kparam_string = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @param_get_string(i8* %0, %struct.kernel_param* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.kernel_param*, align 8
  %5 = alloca %struct.kparam_string*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.kernel_param* %1, %struct.kernel_param** %4, align 8
  %6 = load %struct.kernel_param*, %struct.kernel_param** %4, align 8
  %7 = getelementptr inbounds %struct.kernel_param, %struct.kernel_param* %6, i32 0, i32 0
  %8 = load %struct.kparam_string*, %struct.kparam_string** %7, align 8
  store %struct.kparam_string* %8, %struct.kparam_string** %5, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = load %struct.kparam_string*, %struct.kparam_string** %5, align 8
  %11 = getelementptr inbounds %struct.kparam_string, %struct.kparam_string* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.kparam_string*, %struct.kparam_string** %5, align 8
  %14 = getelementptr inbounds %struct.kparam_string, %struct.kparam_string* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @strlcpy(i8* %9, i32 %12, i32 %15)
  ret i32 %16
}

declare dso_local i32 @strlcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
